[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadclaw"
version = "0.3.0"
description = "Lightweight lead tracking CLI for local service businesses"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.25",
    "python-dotenv~=1.0",
]

[project.scripts]
leadclaw = "leadclaw.commands:main"
leadclaw-seed = "leadclaw.seed:main"
leadclaw-scheduler = "leadclaw.scheduler:main"
leadclaw-web = "leadclaw.web:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
