[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadclaw"
version = "0.4.0"
description = "Lightweight lead tracking CLI for local service businesses"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Morgan Labs", email = "morgan@morganlabs.org" },
]
dependencies = [
    "anthropic>=0.25",
    "python-dotenv~=1.0",
    "flask>=3.0",
    "flask-login>=0.6",
    "flask-limiter>=3.0",
    "bcrypt>=4.0",
]

[project.urls]
Homepage = "https://morganlabs.org"
Repository = "https://github.com/morgan-coded/leadclaw"
Issues = "https://github.com/morgan-coded/leadclaw/issues"

[project.scripts]
leadclaw = "leadclaw.commands:main"
leadclaw-seed = "leadclaw.seed:main"
leadclaw-scheduler = "leadclaw.scheduler:main"
leadclaw-web = "leadclaw.web:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
leadclaw = ["templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
